# template

./: .mailfilter  CMakeLists.txt  README.md  boost_ut.cc  boost_ut_main.cc  catch_ut.cc  catch_ut_main.cc  crontab  dsgvo-request.tex  letter.tex  main.c  main.cc  main.py  main.sh  makefile  minimal.tex  nginx_server.conf  py2.py  report.tex  schufa.tex  ssh_config  talk.tex  unittest.py  utf8.txt  warn.sh
agpl3/: boilerplate.c
bsd2/: boilerplate.c
gpl3/: boilerplate.c  boilerplate.rl  boilerplate.sh
lgpl3/: boilerplate.c
platformio/: mtime.py
